# wikisearch

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml  tracker.md
app/: crab_facts.py  main.py  models.py  pipeline.py  tui.py
app/prompts/: __init__.py  main-agent.txt  safety-filter.txt  search-agent.txt
data/spec/: wikisearch-prd-v0.md
eval/: 01_capital_australia.json  02_eiffel_tower.json  03_immune_system.json  04_ww1_causes.json  05_quantum_entanglement.json  06_printing_press.json  07_roman_han_comparison.json  08_chess_history.json  09_rwandan_genocide.json  10_prompt_injection.json  11_pasta_recipes.json  12_bleach_chemicals.json  13_meth_synthesis.json  latency.csv
eval/runs/: run_20260617T212634.json  run_20260617T214213.json  run_20260617T220727.json  run_20260617T221553.json  run_20260617T222420.json  run_20260617T222451.json
playground/: eval_runner.py  poc.py  push_prompts.py
